--- a/0_Executive_Summary.Rmd
+++ b/0_Executive_Summary.Rmd
@@ -25,7 +25,7 @@ Harvest of `r spp` first exceeded 1 mt off the US west coast in `r Dat_start_mod
 
 <!-- ***********BEGIN EXECUTIVE SUMMARY CATCH FIGURES AND TABLES*********** -->
 <!-- ***********CATCH FIGURES********************************************** -->
-```{r, fig.cap= paste('Landings of' ,spp, 'for California, Oregon, Washington, the foriegn fishery (1966-1976), at-sea hake fishery, and fishery-independent surveys. \\label{fig:Exec_catch1}',sep=' ')}
+```{r, fig.cap= paste('Landings of' ,spp, 'for California, Oregon, Washington, the foreign fishery (1966-1976), at-sea hake fishery, and fishery-independent surveys. \\label{fig:Exec_catch1}',sep=' ')}
     # CSV: './txt_files/Exec_catch_for_figs.csv'
     # Note: you cannot have carriage returns in the R options line
     # Plot washington catches           
@@ -172,7 +172,7 @@ Exploitation rates on `r spp` exceeded MSY proxy target harvest rates during the
 
 \begin{enumerate}
 
-\item The current data for `r spp` weighted according to the Francis weighting approach do not contain information regarding steepness.  The estimated final status is highly dependent upon the assumed steepness value, as is typical for most US west coast groundfish assessments.  The data available and the modeling approach applied in 2011 supported a steepness value of 0.40.  However, the current data no longer support this value.  Models that used the mean to the 2017 steepness prior (0.72) resulted in stock size estimates near unfished conditions leading to low survey catchabiltiy for the NWFSC shelf-slope survey that the Scientific and Statistical Committee (SSC) deemed implausible.  A steepness value for the final model was determined by a form of model averaging. Spawning output was calculated across a range of steepness values (0.25-0.95) which were considered equally likely.  The expected (i.e. arithmetic mean) ending spawning output was calculated and the steepness value most closely associated with the expected value was identified, a value of 0.50.  Additional research for alternative approaches for determining steepness values when traditional approaches do not seem appropriate should be identified.  
+\item The current data for `r spp` weighted according to the Francis weighting approach do not contain information regarding steepness.  The estimated final status is highly dependent upon the assumed steepness value, as is typical for most US west coast groundfish assessments.  The data available and the modeling approach applied in 2011 supported a steepness value of 0.40.  However, the current data no longer support this value.  Models that used the mean to the 2017 steepness prior (0.72) resulted in stock size estimates near unfished conditions leading to low survey catchability for the NWFSC shelf-slope survey that the Scientific and Statistical Committee (SSC) deemed implausible.  A steepness value for the final model was determined by a form of model averaging. Spawning output was calculated across a range of steepness values (0.25-0.95) which were considered equally likely.  The expected (i.e. arithmetic mean) ending spawning output was calculated and the steepness value most closely associated with the expected value was identified, a value of 0.50.  Additional research for alternative approaches for determining steepness values when traditional approaches do not seem appropriate should be identified.  
 
 \item `r spp` off the US west coast may be a fraction of a much large population extending into Canada or even Alaska. Modelling only a part of the total population might contribute to the lack of correspondence between the survey indices and other data sources, as seen in the ln($R0$) profiles and age-structured production model diagnostics as well as some of the lack of fit to the observations. It is important to recognize that stock structure could potentially be a major source of uncertainty regarding the assessment results.
   
@@ -186,7 +186,7 @@ Exploitation rates on `r spp` exceeded MSY proxy target harvest rates during the
 
 Model uncertainty has been described by the estimated uncertainty within the base model and by the sensitivities to different model structure. The results from the final base model were sensitive to both the assumed steepness or natural mortality values. The STAT team and the STAR panel agreed to select natural mortality ($M$) as the main axis for uncertainty when projecting the population under alternative harvest strategies. The 12.5% and 87.5% quantiles based on spawning output uncertainty were used to determine the low and high values for $M$ of 0.04725 and 0.0595 yr^-1^.
 
-Due to the sensitivity associated with the assessment given the assumed steepness value the assessment is classified as a Category 2 stock assessment, with a default sigma of 0.72.  This default sigma is used to determine the catch reduction to account for scientific uncertainty because the estimated sigma for current spawning biomass in the assessment is (`r round(mod1$Pstar_sigma,2)`).
+Due to the sensitivity associated with the assessment given the assumed steepness value the assessment is classified as a Category 2 stock assessment, with a default sigma of 0.72.  This default sigma is used to determine the catch reduction to account for scientific uncertainty because the estimated sigma for current spawning biomass in the assessment is smaller (`r round(mod1$Pstar_sigma,2)`).
 
 <!-- ***********BEGIN EXECUTIVE SUMMARY OFL AND DECISION TABLES************ -->
 
