--- a/BibFile_new.bib
+++ b/BibFile_new.bib
@@ -352,7 +352,7 @@
 }
 
 @article{gunderson_population_1977,
-	title = {Population biology of {Pacific} ocean perch, \textit{{Sebastes} alutus}, stocks in the {WashingtonQueen} {Charlotte} {Sound} region and their response to fishing},
+	title = {Population biology of {Pacific} ocean perch, \textit{{Sebastes} alutus}, stocks in the {Washington} {Queen} {Charlotte} {Sound} region and their response to fishing},
 	volume = {75},
 	journal = {Fishery Bulletin},
 	author = {Gunderson, Donald R.},
@@ -883,7 +883,7 @@
 }
 
 @article{helser_generalized_2004,
-	title = {A generalized linear mixed model analysis of a multi-vessel fishery resouce survey},
+	title = {A generalized linear mixed model analysis of a multi-vessel fishery resource survey},
 	volume = {70},
 	author = {Helser, T.E. and Punt, A. E. and Methot, R. D.},
 	year = {2004},
