--- a/PacificOceanPerch2017_Assessment.tex
+++ b/PacificOceanPerch2017_Assessment.tex
@@ -164,11 +164,6 @@ Kelli F. Johnson\textsuperscript{1,2}\\
 \vspace{1cm}
 
 \vfill
-DRAFT SAFE\\
-Disclaimer: This information is distributed solely for the purpose of pre-dissemination
-peer review under applicable information quality guidelines. It has not been formally
-disseminated by NOAA Fisheries. It does not represent and should not be construed to
-represent any agency determination or policy. 
 
 
 
@@ -182,7 +177,7 @@ represent any agency determination or policy.
 
 Please cite as:\\
 
-Wetzel, C.R., Cronin-Fine, L., and Johnson, K.F. 2017. Status of Pacific ocean perch (\textit{Sebastes alutus}) along the US west coast in 2017. Pacific Fishery Managment Council, 7700 Ambassador Place NE, Suite 200, Portland, OR 97220. 
+Wetzel, C.R., Cronin-Fine, L., and Johnson, K.F. 2017. Status of Pacific ocean perch (\textit{Sebastes alutus}) along the US west coast in 2017. Pacific Fishery Management Council, 7700 Ambassador Place NE, Suite 200, Portland, OR 97220. 
 
 \vspace{3cm}
 
@@ -278,7 +273,7 @@ Year & California & Oregon & Washington & At-sea hake & Survey & Total Landings 
 \centering
 \includegraphics{PacificOceanPerch2017_Assessment_files/figure-latex/unnamed-chunk-14-1.pdf}
 \caption{Landings of Pacific ocean perch for California, Oregon,
-Washington, the foriegn fishery (1966-1976), at-sea hake fishery, and
+Washington, the foreign fishery (1966-1976), at-sea hake fishery, and
 fishery-independent surveys. \label{fig:Exec_catch1}}
 \end{figure}
 
@@ -434,7 +429,7 @@ the base model with 95\% confidence or credibility intervals.
 
 \begin{table}[ht]
 \centering
-\caption{Recent estimated trend in recruitment and estimated recruitment deviations determined from the base model. The recruitment deviaitons for 2016 and 2017 were fixed at zero within the model.} 
+\caption{Recent estimated trend in recruitment and estimated recruitment deviations determined from the base model. The recruitment deviations for 2016 and 2017 were fixed at zero within the model.} 
 \label{tab:Recruit_mod1}
 \begin{tabular}{>{\centering}p{.8in}>{\centering}p{1.0in}>{\centering}p{1.4in}>{\centering}p{1.0in}>{\centering}p{1.4in}}
   \hline
@@ -659,7 +654,7 @@ Uncertainties}
 
 \begin{enumerate}
 
-\item The current data for Pacific ocean perch weighted according to the Francis weighting approach do not contain information regarding steepness.  The estimated final status is highly dependent upon the assumed steepness value, as is typical for most US west coast groundfish assessments.  The data available and the modeling approach applied in 2011 supported a steepness value of 0.40.  However, the current data no longer support this value.  Models that used the mean to the 2017 steepness prior (0.72) resulted in stock size estimates near unfished conditions leading to low survey catchabiltiy for the NWFSC shelf-slope survey that the Scientific and Statistical Committee (SSC) deemed implausible.  A steepness value for the final model was determined by a form of model averaging. Spawning output was calculated across a range of steepness values (0.25-0.95) which were considered equally likely.  The expected (i.e. arithmetic mean) ending spawning output was calculated and the steepness value most closely associated with the expected value was identified, a value of 0.50.  Additional research for alternative approaches for determining steepness values when traditional approaches do not seem appropriate should be identified.  
+\item The current data for Pacific ocean perch weighted according to the Francis weighting approach do not contain information regarding steepness.  The estimated final status is highly dependent upon the assumed steepness value, as is typical for most US west coast groundfish assessments.  The data available and the modeling approach applied in 2011 supported a steepness value of 0.40.  However, the current data no longer support this value.  Models that used the mean to the 2017 steepness prior (0.72) resulted in stock size estimates near unfished conditions leading to low survey catchability for the NWFSC shelf-slope survey that the Scientific and Statistical Committee (SSC) deemed implausible.  A steepness value for the final model was determined by a form of model averaging. Spawning output was calculated across a range of steepness values (0.25-0.95) which were considered equally likely.  The expected (i.e. arithmetic mean) ending spawning output was calculated and the steepness value most closely associated with the expected value was identified, a value of 0.50.  Additional research for alternative approaches for determining steepness values when traditional approaches do not seem appropriate should be identified.  
 
 \item Pacific ocean perch off the US west coast may be a fraction of a much large population extending into Canada or even Alaska. Modelling only a part of the total population might contribute to the lack of correspondence between the survey indices and other data sources, as seen in the ln($R0$) profiles and age-structured production model diagnostics as well as some of the lack of fit to the observations. It is important to recognize that stock structure could potentially be a major source of uncertainty regarding the assessment results.
   
@@ -687,7 +682,7 @@ steepness value the assessment is classified as a Category 2 stock
 assessment, with a default sigma of 0.72. This default sigma is used to
 determine the catch reduction to account for scientific uncertainty
 because the estimated sigma for current spawning biomass in the
-assessment is (0.27).
+assessment is smaller (0.27).
 
 \begin{table}[ht]
 \centering
@@ -1093,7 +1088,7 @@ Fish with ages also have an associated length and each type of data have
 been used in the model. Age data from the NWFSC shelf-slope survey were
 used as conditional-age-at-length data within the model, which avoids
 double of the length and age data by explicitly stating the length
-associatted with each aged fish. Hence, the length and
+associated with each aged fish. Hence, the length and
 conditional-age-at-length data from the NWFSC shelf-slope survey were
 given full weight in likelihood calculations when model fitting.
 
@@ -1958,8 +1953,8 @@ Dome-shaped selectivity was explored for all fleets within the model.
 Older Pacific ocean perch are often found in deeper waters and may move
 into areas that limit their availability to fishing gear, especially
 trawl gear. The final base model estimated dome-shaped selectivity for
-only the fishery. The selectivties for the the at-sea hake fishery and
-all surveys were estimated asymptotic.
+only the fishery. The selectivties for the at-sea hake fishery and all
+surveys were estimated asymptotic.
 
 \subsection{Model Selection and
 Evaluation}\label{model-selection-and-evaluation}
@@ -2090,7 +2085,7 @@ investigation.
 \emph{STAT response: This assessment was performed in Stock Synthesis,
 an integrated model, which can be modified to either simple or complex
 structural forms based upon the available data and the processes being
-modeled. There were not addtional explorations of alternative modeling
+modeled. There were not additional explorations of alternative modeling
 platforms.}
 
 Recommendation: Discard estimates from observer programs should be
@@ -2128,7 +2123,7 @@ catch reconstruction meeting was held in November of 2016 where states
 discussed methods and approaches to improve historical catch estimates.
 Additionally, both California and Washington are conducting research to
 estimate uncertainty surrounding historical catches which could be used
-to propegate uncertainty within the assessment.}
+to propagate uncertainty within the assessment.}
 
 \subsection{Response to the 2017 STAR Panel
 Requests}\label{response-to-the-2017-star-panel-requests}
@@ -2157,7 +2152,7 @@ GFSC Recommendation: Given the considerable uncertainty associated with
 the assessment, the GFSC recommends that the next assessment be a full
 assessment.
 
-\emph{STAT response: We agree with the GFSC recommmendation.}
+\emph{STAT response: We agree with the GFSC recommendation.}
 
 Additionally, a number of general recommendations were made for all West
 Coast assessments:
@@ -2218,8 +2213,8 @@ over time are shown in Table \ref{tab:Timeseries_mod1}.
 \subsubsection{Parameter Estimates}\label{parameter-estimates}
 
 The estimates of maximum length and the von Bertanlaffy growth
-coefficient, \(k\), were less than the the external estimates for males
-and female but were well within the 95\% confidence interval given the
+coefficient, \(k\), were less than the external estimates for males and
+female but were well within the 95\% confidence interval given the
 estimated uncertainty (Table \ref{tab:model_params}, Figures
 \ref{fig:sizeatage} and \ref{fig:length_compare}). The majority of
 growth for female and male Pacific ocean perch growth occurs at younger
@@ -2626,7 +2621,7 @@ estimated ACL for years 2019-2028 and a catch allocation equal to the
 percentages for each fleet over the period of 2014-2016 predicts an
 increase in the spawning output due to the large 2008 cohort, with a
 slight downturn beginning in 2023 (Table \ref{tab:Forecast_mod1}). The
-removals in 2018 and 2019 were set at the defined management
+removals in 2017 and 2018 were set at the defined management
 specification of 281 mt for each year assuming full attainment.
 Additional projections with the current ACL or the SPR50 MSY using the
 low and high states of nature are provided in Table
@@ -3529,7 +3524,7 @@ Starting year & 1918 \\
   \underline{Data characteristics} &  \\ 
   Data lengths & 11-47 cm by 1 cm bins \\ 
   Data ages & 1-40 ages \\ 
-  Minimun age for growth calculations & 3 \\ 
+  Minimum age for growth calculations & 3 \\ 
   Maximum age for growth calculations & 20 \\ 
   First mature age & 0 \\ 
   Starting year of estimated recruitment & 1940 \\ 
@@ -3558,7 +3553,7 @@ Starting year & 1918 \\
 
 \begin{table}[ht]
 \centering
-\caption{Data weights applied when using Francis data weighting in the base model. The data weights were aquired after a single model weighting iteration.} 
+\caption{Data weights applied when using Francis data weighting in the base model. The data weights were acquired after a single model weighting iteration.} 
 \label{tab:francis}
 \begin{tabular}{>{\raggedright}p{2in}>{\centering}p{.7in}>{\centering}p{.7in}}
   \hline
@@ -4006,7 +4001,7 @@ Fishery & 0.361 & 0.77 \\
 \centering
 \caption{Projection of potential
                                          OFL, spawning biomass, and depletion for the
-                                         base case model. The removals in 2018 and 2019 
+                                         base case model. The removals in 2017 and 2018 
                                          were set at the defined management specification of 281 mt for each year assuming full attainment.} 
 \label{tab:Forecast_mod1}
 \begin{tabular}{c>{\centering}p{1in}>{\centering}p{1in}>{\centering}p{1in}>{\centering}p{1in}}
@@ -4832,7 +4827,7 @@ Pacific ocean perch. \label{fig:sens2_ssb}}
 \begin{figure}
 \centering
 \includegraphics{Figures/depl_sens2.png}
-\caption{Time-series of relative spawning outptut (depletion) for model
+\caption{Time-series of relative spawning output (depletion) for model
 sensitivities for Pacific ocean perch. \label{fig:sens2_depl}}
 \end{figure}
 
@@ -5407,7 +5402,7 @@ Suite 200, Portland, OR 97220.
 
 \hypertarget{ref-gunderson_population_1977}{}
 Gunderson, D.R. 1977. Population biology of Pacific ocean perch,
-\emph{Sebastes alutus}, stocks in the WashingtonQueen Charlotte Sound
+\emph{Sebastes alutus}, stocks in the Washington Queen Charlotte Sound
 region and their response to fishing. Fishery Bulletin \textbf{75}:
 369--403.
 
@@ -5460,7 +5455,7 @@ waters off Oregon. Alaska Sea Grant, University of Alaska Fairbanks. pp.
 
 \hypertarget{ref-helser_generalized_2004}{}
 Helser, T., Punt, A.E., and Methot, R.D. 2004. A generalized linear
-mixed model analysis of a multi-vessel fishery resouce survey.
+mixed model analysis of a multi-vessel fishery resource survey.
 \textbf{70}: 251--264.
 
 \hypertarget{ref-hicks_status_2015}{}
