--- a/Titlepage.tex
+++ b/Titlepage.tex
@@ -30,11 +30,6 @@ Kelli F. Johnson\textsuperscript{1,2}\\
 \vspace{1cm}
 
 \vfill
-DRAFT SAFE\\
-Disclaimer: This information is distributed solely for the purpose of pre-dissemination
-peer review under applicable information quality guidelines. It has not been formally
-disseminated by NOAA Fisheries. It does not represent and should not be construed to
-represent any agency determination or policy. 
 
 
 
@@ -48,7 +43,7 @@ represent any agency determination or policy.
 
 Please cite as:\\
 
-Wetzel, C.R., Cronin-Fine, L., and Johnson, K.F. 2017. Status of Pacific ocean perch (\textit{Sebastes alutus}) along the US west coast in 2017. Pacific Fishery Managment Council, 7700 Ambassador Place NE, Suite 200, Portland, OR 97220. 
+Wetzel, C.R., Cronin-Fine, L., and Johnson, K.F. 2017. Status of Pacific ocean perch (\textit{Sebastes alutus}) along the US west coast in 2017. Pacific Fishery Management Council, 7700 Ambassador Place NE, Suite 200, Portland, OR 97220. 
 
 \vspace{3cm}
 
