Final edits part2

--- a/2_Data.Rmd
+++ b/2_Data.Rmd
@@ -39,7 +39,7 @@ Fish with ages also have an associated length and each type of data have been us
 
 ###Alaska Fisheries Science Center (AFSC) Slope Survey 
 
-The AFSC slope survey operated during autumn (October-November) aboard the R/V Miller Freeman. Partial survey coverage of the US west coast occurred during 1988-96 and complete coverage (north of $34^\circ 30^\prime$ S) during 1997, 1999, 2000, and 2001. Only the four years of consistent and complete surveys (1997, 1999, 2000, and 2001) plus 1996, which surveyed north of $43^\circ$ N latitude to the US-Canada border, were used in this assessment.  These same data years were used in the last assessment. The number of tows with length data ranged from 19 in 2000 to 48 in 1996 (Table \ref{tab:AFSC_Lengths}).  Because a large number of positive tows occurred in 1996, it was decided to include that year, which surveyed from $43^\circ$ N latitude to the US-Canada border. Therefore, only tows from $43^\circ$ N latitude to the US-Canada border were used across all years to create and index of abundance.  
+The AFSC slope survey operated during autumn (October-November) aboard the R/V Miller Freeman. Partial survey coverage of the US west coast occurred during 1988-96 and complete coverage (north of $34^\circ 30^\prime$ S) during 1997, 1999, 2000, and 2001. Only the four years of consistent and complete surveys (1997, 1999, 2000, and 2001) plus 1996, which surveyed north of $43^\circ$ N latitude to the US-Canada border, were used in this assessment.  These same data years were used in the last assessment. The number of tows with length data ranged from 19 in 2000 to 48 in 1996 (Table \ref{tab:AFSC_Lengths}).  Because a large number of positive tows occurred in 1996, it was decided to include that year, which surveyed from $43^\circ$ N latitude to the US-Canada border. Therefore, only tows from $43^\circ$ N latitude to the US-Canada border were used across all years to create an index of abundance.  
 
 An index of abundance was estimated based on the data using the VAST delta-GLMM model.  The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.  The stratification and modeling configuration are provided in Table \ref{tab:strata}.  The lognormal distribution with random strata-year had the lowest AIC and was chosen as the final model.  The Q-Q plot does not show any departures from the assumed distribution (Figure \ref{fig:afsc_qq}).  The trend in the indices was generally flat over time.
 
