--- a/PacificOceanPerch2017_Assessment.tex
+++ b/PacificOceanPerch2017_Assessment.tex
@@ -164,7 +164,7 @@ Kelli F. Johnson\textsuperscript{1,2}\\
 \vspace{1cm}
 
 \vfill
-
+December 2017
 
 
 \vspace{.3cm}
@@ -1149,7 +1149,7 @@ ranged from 19 in 2000 to 48 in 1996 (Table \ref{tab:AFSC_Lengths}).
 Because a large number of positive tows occurred in 1996, it was decided
 to include that year, which surveyed from \(43^\circ\) N latitude to the
 US-Canada border. Therefore, only tows from \(43^\circ\) N latitude to
-the US-Canada border were used across all years to create and index of
+the US-Canada border were used across all years to create an index of
 abundance.
 
 An index of abundance was estimated based on the data using the VAST
